--- a/package.json
+++ b/package.json
@@ -1,12 +1,27 @@
 {
   "name": "eksi2json",
   "description": "eksi sozluk yedeklerinizi json'a cevirmeye yarayan hede.",
+  "version": "0.0.2",
   "author": {
     "name": "Onur Ravli",
     "email": "onur@onurravli.com",
     "url": "https://onurravli.com"
   },
+  "main": "./dist/bin/index.js",
+  "bin": {
+    "eksi2json": "./dist/bin/index.js"
+  },
   "dependencies": {
+    "commander": "^12.1.0",
     "xml2js": "^0.6.2"
+  },
+  "devDependencies": {
+    "@types/node": "^22.2.0",
+    "@types/xml2js": "^0.4.14",
+    "typescript": "^5.5.4"
+  },
+  "scripts": {
+    "build": "tsc -p .",
+    "build:dev": "tsc -p . --watch"
   }
 }
